Import of GRAYKOT/Net-Whois-Gateway-Server-0.05 from CPAN.
gitpan-cpan-distribution: Net-Whois-Gateway-Server
gitpan-cpan-version:      0.05
gitpan-cpan-path:         GRAYKOT/Net-Whois-Gateway-Server-0.05.tar.gz
gitpan-cpan-author:       GRAYKOT
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Net-Whois-Gateway-Server
-version: 0.04
+version: 0.05
 author:
   - 'Sergey Kotenko <graykot@gmail.com>'
 abstract: whois gateway
@@ -8,8 +8,9 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 requires:
+  Net::Ifconfig::Wrapper: 0
   POE: 0
-  POE::Component::Client::Whois::Smart: 0
+  POE::Component::Client::Whois::Smart: 0.09
   POE::Component::Server::TCP: 0
   POE::Filter::Reference: 0
   Proc::Daemon: 0
@@ -17,7 +18,7 @@ requires:
 provides:
   Net::Whois::Gateway::Server:
     file: lib/Net/Whois/Gateway/Server.pm
-    version: 0.04
+    version: 0.05
 generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
